--- a/src/components/features/Features.css
+++ b/src/components/features/Features.css
@@ -46,7 +46,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  width: 100%;
+  /* width: 100%; */
   flex-wrap: wrap;
   margin-left: 8rem;
 }
@@ -96,7 +96,8 @@
   }
 
   .list-card {
-    width: 100%;
+    width: 90%;
+    padding: 1.2rem 0;
   }
   .list-icon {
     padding: 0;
@@ -112,14 +113,14 @@
   }
   .list-container {
     flex-wrap: wrap;
-    /* flex-direction: column; */
+
     justify-content: space-between;
-    width: 100%;
     margin: 0;
     margin-top: 2rem;
   }
   .list-card {
     width: calc(50% - 1rem);
+    padding: 1.5rem;
     margin-bottom: 1rem;
   }
 }
